# misc

./: .gitignore  README.md
CHARMS/ref/app/elasticity/src/: Makefile.am  btcb.m  diary  ecell_elasticity.cc  ecell_elasticity.h  ecell_elasticity_h8.cc  ecell_elasticity_h8.h  ecell_elasticity_h8_bbar.cc  ecell_elasticity_h8_bbar.h  ecell_elasticity_l2.cc  ecell_elasticity_l2.h  ecell_elasticity_plane_strain_q4.cc  ecell_elasticity_plane_strain_q4.h  ecell_elasticity_presst3.cc  ecell_elasticity_presst3.h  ecell_elasticity_t4.cc  ecell_elasticity_t4.h  ecell_elasticity_traction_l2.cc  ecell_elasticity_traction_l2.h  ecell_elasticity_traction_q4.cc  ecell_elasticity_traction_q4.h  ecell_errest_elasticity_h8.cc  ecell_errest_elasticity_h8.h  ecell_errest_elasticity_plane_strain_q4.cc  ecell_errest_elasticity_plane_strain_q4.h  ecell_errest_elasticity_t4.cc  ecell_errest_elasticity_t4.h  iso.c  load_on_gcell.cc  load_on_gcell.h  load_on_gcell_body.cc  load_on_gcell_body.h  load_on_gcell_traction.cc  load_on_gcell_traction.h  mat_elasticity_iso.cc  mat_elasticity_iso.h  nz.cc  proto_elasticity.cc  proto_elasticity.h  select_les.h
CHARMS/ref/app/elasticity/threedh8/: Makefile.am  Mandible.egf  Mandible.fpar  Mandible.view  Mandif.fen  Mandif.fpar  Mandit-gg1.conn  Mandit.ebc  beam-gg1.conn  beam.ebc  beam.fen  beam.fpar  beambbar.fpar  cook.egf  cook.in  cook1.ebc  cook1.fen  cook1.fpar  hexvue.sh  main.cc  r16sqpl-gg1.conn  r16sqpl-gg2.conn  r16sqpl.fen  r16sqpl.fpar  rsqpl-gg1.conn  rsqpl.fpar  rsqpl.in  slenderbeam.fen  slenderbeam.fpar  slenderbeambbar.fpar  sqpl-gg1.conn  sqpl-gg2.conn  sqpl.ebc  sqpl.fen  sqpl.fpar  sqpl.hexvue  sqpl.in  sqplthick.fen  sqplthick.fpar  test.sh
CHARMS/ref/app/modl/src/: Makefile.am  algo_modl.cc  algo_modl.h  bbar.m  btcb.h  btcbbar.h  c.m  ecell_modl.cc  ecell_modl.h  ecell_modl_h20.cc  ecell_modl_h20.h  ecell_modl_h8.cc  ecell_modl_h8.h  ecell_modl_h8_bbar.cc  ecell_modl_h8_bbar.h  ecell_modl_t10.cc  ecell_modl_t10.h  incomp.m  mat_elasticity.cc  mat_elasticity.h  mat_elasticity_iso.cc  mat_elasticity_iso.h  mat_elasticity_iso_old.cc  nz.h  proto_modl.cc  proto_modl.h  uKu.sh
CHARMS/ref/app/modl/threedh8/: Makefile.am  Mandible.ebc  Mandible.egf  Mandible.fpar  Mandit.fpar  beam.ebc  beam.egf  beam.fen  beam.fpar  beam.hexvue  ccbeam.ebc  ccbeam100x2-gg1.conn  ccbeam100x2.egf  ccbeam100x2.fen  ccbeam100x2.fpar  ccbeam100x2b.egf  ccbeam100x2b.fpar  ccbeam128x8-gg1.conn  ccbeam128x8.egf  ccbeam128x8.fen  ccbeam128x8.fpar  ccbeam128x8b.egf  ccbeam128x8b.fpar  ccbeam16.in  ccbeam16x1-gg1.conn  ccbeam16x1.egf  ccbeam16x1.fen  ccbeam16x1.fpar  ccbeam16x1b.egf  ccbeam16x1b.fpar  ccbeam16x2-gg1.conn  ccbeam16x2.egf  ccbeam16x2.fen  ccbeam16x2.fpar  ccbeam16x2b.egf  ccbeam16x2b.fpar  ccbeam64x1-gg1.conn  ccbeam64x1.egf  ccbeam64x1.fen  ccbeam64x1.fpar  (+16 more)
CHARMS/ref/app/sim_heat/src/: Makefile.am  Makefile.in  algo_sim_heat.cc  algo_sim_heat.h  proto_sim_heat.h
CHARMS/ref/app/steady_diffusion/src/: Makefile.am  algo_steady_diffusion.cc  algo_steady_diffusion.h  ecell_errest_steady_diffusion_h8.cc  ecell_errest_steady_diffusion_h8.h  ecell_errest_steady_diffusion_l2.cc  ecell_errest_steady_diffusion_l2.h  ecell_errest_steady_diffusion_q4.cc  ecell_errest_steady_diffusion_q4.h  ecell_errest_steady_diffusion_t10.cc  ecell_errest_steady_diffusion_t10.h  ecell_errest_steady_diffusion_t3.cc  ecell_errest_steady_diffusion_t3.h  ecell_errest_steady_diffusion_t4.cc  ecell_errest_steady_diffusion_t4.h  ecell_errest_steady_diffusion_t6.cc  ecell_errest_steady_diffusion_t6.h  ecell_steady_diffusion.cc  ecell_steady_diffusion.h  ecell_steady_diffusion_h8.cc  ecell_steady_diffusion_h8.h  ecell_steady_diffusion_l2.cc  ecell_steady_diffusion_l2.h  ecell_steady_diffusion_q4.cc  ecell_steady_diffusion_q4.h  ecell_steady_diffusion_t10.cc  ecell_steady_diffusion_t10.h  ecell_steady_diffusion_t3.cc  ecell_steady_diffusion_t3.h  ecell_steady_diffusion_t3_aniso.cc  ecell_steady_diffusion_t3_aniso.h  ecell_steady_diffusion_t4.cc  ecell_steady_diffusion_t4.h  ecell_steady_diffusion_t6.cc  ecell_steady_diffusion_t6.h  mat_diffusion.cc  mat_diffusion.h  mat_diffusion_aniso.cc  mat_diffusion_aniso.h  mat_diffusion_iso.cc  (+4 more)
CHARMS/ref/app/steady_diffusion/threedh8/: Makefile.am  biunit-gg1.conn  biunit.ebc  biunit.fen  biunit.fpar  biunit.hexvue  biunit.in  cut.egf  cutout-gg1.conn  cutout-outline.egf  cutout.ebc  cutout.fen  cutout.fpar  cutout.hexvue  cutout.in  cutout.view  demo  ldomain-gg1.conn  ldomain.ebc  ldomain.egf  ldomain.fen  ldomain.fpar  ldomain2-gg1.conn  ldomain2.ebc  ldomain2.fpar  ldomain2.in  main.cc  ring-outline.egf  ringf-gg1.conn  ringf.fen  ringf.fpar  ringt-gg1.conn  ringt.ebc  ringt.fen  ringt.fpar  split-gg1.conn  split.ebc  split.fen  split.fpar  split.hexvue  (+22 more)
CHARMS/ref/app/steady_diffusion/threedt10/: Makefile.am  clean.sh  cracker-gg1.conn  cracker.ebc  cracker.fen  cracker.fpar  cracker.hexvue  cracker.info  floyd-gg1.conn  floyd.ebc  floyd.fen  floyd.fpar  hexvue.sh  main.cc  ong.fen  ong.fpar  slab-gg1.conn  slab.ebc  slab.egf  slab.fen  slab.fpar  slab.info  slab.vin  test.sh
CHARMS/ref/app/steady_diffusion/twodq4/: Makefile.am  acool.ebc  acool.fpar  acool.hexvue  acool.view  adapt.sh  asplit-gg1.conn  asplit.ebc  asplit.fpar  asplit.hexvue  bigq-gg1.conn  bigq.ebc  bigq.fen  bigq.fpar  bigq.hexvue  bigq.view  circle-gg1.conn  circle.ebc  circle.fen  circle.fpar  circle.shp  cool-gg1.conn  cool.fen  cool.fpar  cool.hexvue  cool3-gg1.conn  cool3.ebc  cool3.fen  cool3.fpar  cool3.hexvue  demo  famuls-gg1.conn  famuls.ebc  famuls.fen  famuls.fpar  famuls.hexvue  fancy-gg1.conn  fancy.ebc  fancy.egf  fancy.fen  (+67 more)
CHARMS/ref/app/steady_diffusion/twodt3/: Makefile.am  adldomain.fpar  channel-gg1.conn  channel.ebc  channel.fen  channel.fpar  channel.in  charms-gg1.conn  charms.ebc  charms.fen  charms.fpar  charms.info  charms.tin  clean.sh  hexvue.sh  ldomain.ebc  ldomain.fpar  ldomain.hexvue  ldomain.view  ldomain2-gg1.conn  ldomain2.ebc  ldomain2.fen  ldomain2.fpar  ldomain2.hexvue  ldomnzebc-gg1.conn  ldomnzebc.ebc  ldomnzebc.fen  ldomnzebc.fpar  (+8 more)
(+891 files in other folders)
